src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> s
Rule 1     s -> ROUTE NOME BEGIN fase_heavy END
Rule 2     fase_heavy -> LOAD HEAVY NOME WEIGHT PESO_HEAVY KG fase_heavy UNLOAD HEAVY fase_heavy
Rule 3     fase_heavy -> fase_light
Rule 4     fase_heavy -> SAIL TO NOME fase_heavy
Rule 5     fase_heavy -> empty
Rule 6     fase_light -> LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_light UNLOAD LIGHT fase_light
Rule 7     fase_light -> LOAD FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_light
Rule 8     fase_light -> LOAD TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_light
Rule 9     fase_light -> SAIL TO NOME fase_light
Rule 10    fase_light -> empty
Rule 11    fase_light -> fase_food
Rule 12    fase_light -> fase_toxic
Rule 13    fase_food -> SAIL TO NOME fase_food
Rule 14    fase_food -> LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_food UNLOAD LIGHT fase_food
Rule 15    fase_food -> LOAD FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_food
Rule 16    fase_food -> empty
Rule 17    fase_toxic -> LOAD TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_toxic
Rule 18    fase_toxic -> LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD LIGHT fase_toxic
Rule 19    fase_toxic -> SAIL TO NOME fase_toxic
Rule 20    fase_toxic -> empty
Rule 21    empty -> <empty>

Terminals, with rules where they appear

BEGIN                : 1
END                  : 1
FOOD                 : 7 7 15 15
HEAVY                : 2 2
KG                   : 2 6 7 8 14 15 17 18
LIGHT                : 6 6 14 14 18 18
LOAD                 : 2 6 7 8 14 15 17 18
NOME                 : 1 2 4 6 7 8 9 13 14 15 17 18 19
PESO_HEAVY           : 2
PESO_LEVE            : 6 7 8 14 15 17 18
ROUTE                : 1
SAIL                 : 4 9 13 19
TO                   : 4 9 13 19
TOXIC                : 8 8 17 17
UNLOAD               : 2 6 7 8 14 15 17 18
WEIGHT               : 2 6 7 8 14 15 17 18
error                : 

Nonterminals, with rules where they appear

empty                : 5 10 16 20
fase_food            : 7 11 13 14 14 15 15
fase_heavy           : 1 2 2 4
fase_light           : 3 6 6 7 8 9
fase_toxic           : 8 12 17 17 18 18 19
s                    : 0

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . ROUTE NOME BEGIN fase_heavy END

    ROUTE           shift and go to state 2

    s                              shift and go to state 1

state 1

    (0) S' -> s .



state 2

    (1) s -> ROUTE . NOME BEGIN fase_heavy END

    NOME            shift and go to state 3


state 3

    (1) s -> ROUTE NOME . BEGIN fase_heavy END

    BEGIN           shift and go to state 4


state 4

    (1) s -> ROUTE NOME BEGIN . fase_heavy END
    (2) fase_heavy -> . LOAD HEAVY NOME WEIGHT PESO_HEAVY KG fase_heavy UNLOAD HEAVY fase_heavy
    (3) fase_heavy -> . fase_light
    (4) fase_heavy -> . SAIL TO NOME fase_heavy
    (5) fase_heavy -> . empty
    (6) fase_light -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_light UNLOAD LIGHT fase_light
    (7) fase_light -> . LOAD FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_light
    (8) fase_light -> . LOAD TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_light
    (9) fase_light -> . SAIL TO NOME fase_light
    (10) fase_light -> . empty
    (11) fase_light -> . fase_food
    (12) fase_light -> . fase_toxic
    (21) empty -> .
    (13) fase_food -> . SAIL TO NOME fase_food
    (14) fase_food -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_food UNLOAD LIGHT fase_food
    (15) fase_food -> . LOAD FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_food
    (16) fase_food -> . empty
    (17) fase_toxic -> . LOAD TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_toxic
    (18) fase_toxic -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD LIGHT fase_toxic
    (19) fase_toxic -> . SAIL TO NOME fase_toxic
    (20) fase_toxic -> . empty

    LOAD            shift and go to state 6
    SAIL            shift and go to state 8
    END             reduce using rule 21 (empty -> .)

    fase_heavy                     shift and go to state 5
    fase_light                     shift and go to state 7
    empty                          shift and go to state 9
    fase_food                      shift and go to state 10
    fase_toxic                     shift and go to state 11

state 5

    (1) s -> ROUTE NOME BEGIN fase_heavy . END

    END             shift and go to state 12


state 6

    (2) fase_heavy -> LOAD . HEAVY NOME WEIGHT PESO_HEAVY KG fase_heavy UNLOAD HEAVY fase_heavy
    (6) fase_light -> LOAD . LIGHT NOME WEIGHT PESO_LEVE KG fase_light UNLOAD LIGHT fase_light
    (7) fase_light -> LOAD . FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_light
    (8) fase_light -> LOAD . TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_light
    (14) fase_food -> LOAD . LIGHT NOME WEIGHT PESO_LEVE KG fase_food UNLOAD LIGHT fase_food
    (15) fase_food -> LOAD . FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_food
    (17) fase_toxic -> LOAD . TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_toxic
    (18) fase_toxic -> LOAD . LIGHT NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD LIGHT fase_toxic

    HEAVY           shift and go to state 13
    LIGHT           shift and go to state 14
    FOOD            shift and go to state 15
    TOXIC           shift and go to state 16


state 7

    (3) fase_heavy -> fase_light .

    END             reduce using rule 3 (fase_heavy -> fase_light .)
    UNLOAD          reduce using rule 3 (fase_heavy -> fase_light .)


state 8

    (4) fase_heavy -> SAIL . TO NOME fase_heavy
    (9) fase_light -> SAIL . TO NOME fase_light
    (13) fase_food -> SAIL . TO NOME fase_food
    (19) fase_toxic -> SAIL . TO NOME fase_toxic

    TO              shift and go to state 17


state 9

    (5) fase_heavy -> empty .
    (10) fase_light -> empty .
    (16) fase_food -> empty .
    (20) fase_toxic -> empty .

  ! reduce/reduce conflict for END resolved using rule 5 (fase_heavy -> empty .)
  ! reduce/reduce conflict for UNLOAD resolved using rule 5 (fase_heavy -> empty .)
  ! reduce/reduce conflict for END resolved using rule 5 (fase_heavy -> empty .)
  ! reduce/reduce conflict for UNLOAD resolved using rule 5 (fase_heavy -> empty .)
  ! reduce/reduce conflict for END resolved using rule 5 (fase_heavy -> empty .)
  ! reduce/reduce conflict for UNLOAD resolved using rule 5 (fase_heavy -> empty .)
    END             reduce using rule 5 (fase_heavy -> empty .)
    UNLOAD          reduce using rule 5 (fase_heavy -> empty .)

  ! END             [ reduce using rule 10 (fase_light -> empty .) ]
  ! UNLOAD          [ reduce using rule 10 (fase_light -> empty .) ]
  ! END             [ reduce using rule 16 (fase_food -> empty .) ]
  ! UNLOAD          [ reduce using rule 16 (fase_food -> empty .) ]
  ! END             [ reduce using rule 20 (fase_toxic -> empty .) ]
  ! UNLOAD          [ reduce using rule 20 (fase_toxic -> empty .) ]


state 10

    (11) fase_light -> fase_food .

    END             reduce using rule 11 (fase_light -> fase_food .)
    UNLOAD          reduce using rule 11 (fase_light -> fase_food .)


state 11

    (12) fase_light -> fase_toxic .

    END             reduce using rule 12 (fase_light -> fase_toxic .)
    UNLOAD          reduce using rule 12 (fase_light -> fase_toxic .)


state 12

    (1) s -> ROUTE NOME BEGIN fase_heavy END .

    $end            reduce using rule 1 (s -> ROUTE NOME BEGIN fase_heavy END .)


state 13

    (2) fase_heavy -> LOAD HEAVY . NOME WEIGHT PESO_HEAVY KG fase_heavy UNLOAD HEAVY fase_heavy

    NOME            shift and go to state 18


state 14

    (6) fase_light -> LOAD LIGHT . NOME WEIGHT PESO_LEVE KG fase_light UNLOAD LIGHT fase_light
    (14) fase_food -> LOAD LIGHT . NOME WEIGHT PESO_LEVE KG fase_food UNLOAD LIGHT fase_food
    (18) fase_toxic -> LOAD LIGHT . NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD LIGHT fase_toxic

    NOME            shift and go to state 19


state 15

    (7) fase_light -> LOAD FOOD . NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_light
    (15) fase_food -> LOAD FOOD . NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_food

    NOME            shift and go to state 20


state 16

    (8) fase_light -> LOAD TOXIC . NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_light
    (17) fase_toxic -> LOAD TOXIC . NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_toxic

    NOME            shift and go to state 21


state 17

    (4) fase_heavy -> SAIL TO . NOME fase_heavy
    (9) fase_light -> SAIL TO . NOME fase_light
    (13) fase_food -> SAIL TO . NOME fase_food
    (19) fase_toxic -> SAIL TO . NOME fase_toxic

    NOME            shift and go to state 22


state 18

    (2) fase_heavy -> LOAD HEAVY NOME . WEIGHT PESO_HEAVY KG fase_heavy UNLOAD HEAVY fase_heavy

    WEIGHT          shift and go to state 23


state 19

    (6) fase_light -> LOAD LIGHT NOME . WEIGHT PESO_LEVE KG fase_light UNLOAD LIGHT fase_light
    (14) fase_food -> LOAD LIGHT NOME . WEIGHT PESO_LEVE KG fase_food UNLOAD LIGHT fase_food
    (18) fase_toxic -> LOAD LIGHT NOME . WEIGHT PESO_LEVE KG fase_toxic UNLOAD LIGHT fase_toxic

    WEIGHT          shift and go to state 24


state 20

    (7) fase_light -> LOAD FOOD NOME . WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_light
    (15) fase_food -> LOAD FOOD NOME . WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_food

    WEIGHT          shift and go to state 25


state 21

    (8) fase_light -> LOAD TOXIC NOME . WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_light
    (17) fase_toxic -> LOAD TOXIC NOME . WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_toxic

    WEIGHT          shift and go to state 26


state 22

    (4) fase_heavy -> SAIL TO NOME . fase_heavy
    (9) fase_light -> SAIL TO NOME . fase_light
    (13) fase_food -> SAIL TO NOME . fase_food
    (19) fase_toxic -> SAIL TO NOME . fase_toxic
    (2) fase_heavy -> . LOAD HEAVY NOME WEIGHT PESO_HEAVY KG fase_heavy UNLOAD HEAVY fase_heavy
    (3) fase_heavy -> . fase_light
    (4) fase_heavy -> . SAIL TO NOME fase_heavy
    (5) fase_heavy -> . empty
    (6) fase_light -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_light UNLOAD LIGHT fase_light
    (7) fase_light -> . LOAD FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_light
    (8) fase_light -> . LOAD TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_light
    (9) fase_light -> . SAIL TO NOME fase_light
    (10) fase_light -> . empty
    (11) fase_light -> . fase_food
    (12) fase_light -> . fase_toxic
    (13) fase_food -> . SAIL TO NOME fase_food
    (14) fase_food -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_food UNLOAD LIGHT fase_food
    (15) fase_food -> . LOAD FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_food
    (16) fase_food -> . empty
    (17) fase_toxic -> . LOAD TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_toxic
    (18) fase_toxic -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD LIGHT fase_toxic
    (19) fase_toxic -> . SAIL TO NOME fase_toxic
    (20) fase_toxic -> . empty
    (21) empty -> .

    LOAD            shift and go to state 6
    SAIL            shift and go to state 8
    END             reduce using rule 21 (empty -> .)
    UNLOAD          reduce using rule 21 (empty -> .)

    fase_heavy                     shift and go to state 27
    fase_light                     shift and go to state 28
    fase_food                      shift and go to state 29
    fase_toxic                     shift and go to state 30
    empty                          shift and go to state 9

state 23

    (2) fase_heavy -> LOAD HEAVY NOME WEIGHT . PESO_HEAVY KG fase_heavy UNLOAD HEAVY fase_heavy

    PESO_HEAVY      shift and go to state 31


state 24

    (6) fase_light -> LOAD LIGHT NOME WEIGHT . PESO_LEVE KG fase_light UNLOAD LIGHT fase_light
    (14) fase_food -> LOAD LIGHT NOME WEIGHT . PESO_LEVE KG fase_food UNLOAD LIGHT fase_food
    (18) fase_toxic -> LOAD LIGHT NOME WEIGHT . PESO_LEVE KG fase_toxic UNLOAD LIGHT fase_toxic

    PESO_LEVE       shift and go to state 32


state 25

    (7) fase_light -> LOAD FOOD NOME WEIGHT . PESO_LEVE KG fase_food UNLOAD FOOD fase_light
    (15) fase_food -> LOAD FOOD NOME WEIGHT . PESO_LEVE KG fase_food UNLOAD FOOD fase_food

    PESO_LEVE       shift and go to state 33


state 26

    (8) fase_light -> LOAD TOXIC NOME WEIGHT . PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_light
    (17) fase_toxic -> LOAD TOXIC NOME WEIGHT . PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_toxic

    PESO_LEVE       shift and go to state 34


state 27

    (4) fase_heavy -> SAIL TO NOME fase_heavy .

    END             reduce using rule 4 (fase_heavy -> SAIL TO NOME fase_heavy .)
    UNLOAD          reduce using rule 4 (fase_heavy -> SAIL TO NOME fase_heavy .)


state 28

    (9) fase_light -> SAIL TO NOME fase_light .
    (3) fase_heavy -> fase_light .

  ! reduce/reduce conflict for END resolved using rule 3 (fase_heavy -> fase_light .)
  ! reduce/reduce conflict for UNLOAD resolved using rule 3 (fase_heavy -> fase_light .)
    END             reduce using rule 3 (fase_heavy -> fase_light .)
    UNLOAD          reduce using rule 3 (fase_heavy -> fase_light .)

  ! END             [ reduce using rule 9 (fase_light -> SAIL TO NOME fase_light .) ]
  ! UNLOAD          [ reduce using rule 9 (fase_light -> SAIL TO NOME fase_light .) ]


state 29

    (13) fase_food -> SAIL TO NOME fase_food .
    (11) fase_light -> fase_food .

  ! reduce/reduce conflict for END resolved using rule 11 (fase_light -> fase_food .)
  ! reduce/reduce conflict for UNLOAD resolved using rule 11 (fase_light -> fase_food .)
    END             reduce using rule 11 (fase_light -> fase_food .)
    UNLOAD          reduce using rule 11 (fase_light -> fase_food .)

  ! END             [ reduce using rule 13 (fase_food -> SAIL TO NOME fase_food .) ]
  ! UNLOAD          [ reduce using rule 13 (fase_food -> SAIL TO NOME fase_food .) ]


state 30

    (19) fase_toxic -> SAIL TO NOME fase_toxic .
    (12) fase_light -> fase_toxic .

  ! reduce/reduce conflict for END resolved using rule 12 (fase_light -> fase_toxic .)
  ! reduce/reduce conflict for UNLOAD resolved using rule 12 (fase_light -> fase_toxic .)
    END             reduce using rule 12 (fase_light -> fase_toxic .)
    UNLOAD          reduce using rule 12 (fase_light -> fase_toxic .)

  ! END             [ reduce using rule 19 (fase_toxic -> SAIL TO NOME fase_toxic .) ]
  ! UNLOAD          [ reduce using rule 19 (fase_toxic -> SAIL TO NOME fase_toxic .) ]


state 31

    (2) fase_heavy -> LOAD HEAVY NOME WEIGHT PESO_HEAVY . KG fase_heavy UNLOAD HEAVY fase_heavy

    KG              shift and go to state 35


state 32

    (6) fase_light -> LOAD LIGHT NOME WEIGHT PESO_LEVE . KG fase_light UNLOAD LIGHT fase_light
    (14) fase_food -> LOAD LIGHT NOME WEIGHT PESO_LEVE . KG fase_food UNLOAD LIGHT fase_food
    (18) fase_toxic -> LOAD LIGHT NOME WEIGHT PESO_LEVE . KG fase_toxic UNLOAD LIGHT fase_toxic

    KG              shift and go to state 36


state 33

    (7) fase_light -> LOAD FOOD NOME WEIGHT PESO_LEVE . KG fase_food UNLOAD FOOD fase_light
    (15) fase_food -> LOAD FOOD NOME WEIGHT PESO_LEVE . KG fase_food UNLOAD FOOD fase_food

    KG              shift and go to state 37


state 34

    (8) fase_light -> LOAD TOXIC NOME WEIGHT PESO_LEVE . KG fase_toxic UNLOAD TOXIC fase_light
    (17) fase_toxic -> LOAD TOXIC NOME WEIGHT PESO_LEVE . KG fase_toxic UNLOAD TOXIC fase_toxic

    KG              shift and go to state 38


state 35

    (2) fase_heavy -> LOAD HEAVY NOME WEIGHT PESO_HEAVY KG . fase_heavy UNLOAD HEAVY fase_heavy
    (2) fase_heavy -> . LOAD HEAVY NOME WEIGHT PESO_HEAVY KG fase_heavy UNLOAD HEAVY fase_heavy
    (3) fase_heavy -> . fase_light
    (4) fase_heavy -> . SAIL TO NOME fase_heavy
    (5) fase_heavy -> . empty
    (6) fase_light -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_light UNLOAD LIGHT fase_light
    (7) fase_light -> . LOAD FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_light
    (8) fase_light -> . LOAD TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_light
    (9) fase_light -> . SAIL TO NOME fase_light
    (10) fase_light -> . empty
    (11) fase_light -> . fase_food
    (12) fase_light -> . fase_toxic
    (21) empty -> .
    (13) fase_food -> . SAIL TO NOME fase_food
    (14) fase_food -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_food UNLOAD LIGHT fase_food
    (15) fase_food -> . LOAD FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_food
    (16) fase_food -> . empty
    (17) fase_toxic -> . LOAD TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_toxic
    (18) fase_toxic -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD LIGHT fase_toxic
    (19) fase_toxic -> . SAIL TO NOME fase_toxic
    (20) fase_toxic -> . empty

    LOAD            shift and go to state 6
    SAIL            shift and go to state 8
    UNLOAD          reduce using rule 21 (empty -> .)

    fase_heavy                     shift and go to state 39
    fase_light                     shift and go to state 7
    empty                          shift and go to state 9
    fase_food                      shift and go to state 10
    fase_toxic                     shift and go to state 11

state 36

    (6) fase_light -> LOAD LIGHT NOME WEIGHT PESO_LEVE KG . fase_light UNLOAD LIGHT fase_light
    (14) fase_food -> LOAD LIGHT NOME WEIGHT PESO_LEVE KG . fase_food UNLOAD LIGHT fase_food
    (18) fase_toxic -> LOAD LIGHT NOME WEIGHT PESO_LEVE KG . fase_toxic UNLOAD LIGHT fase_toxic
    (6) fase_light -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_light UNLOAD LIGHT fase_light
    (7) fase_light -> . LOAD FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_light
    (8) fase_light -> . LOAD TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_light
    (9) fase_light -> . SAIL TO NOME fase_light
    (10) fase_light -> . empty
    (11) fase_light -> . fase_food
    (12) fase_light -> . fase_toxic
    (13) fase_food -> . SAIL TO NOME fase_food
    (14) fase_food -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_food UNLOAD LIGHT fase_food
    (15) fase_food -> . LOAD FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_food
    (16) fase_food -> . empty
    (17) fase_toxic -> . LOAD TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_toxic
    (18) fase_toxic -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD LIGHT fase_toxic
    (19) fase_toxic -> . SAIL TO NOME fase_toxic
    (20) fase_toxic -> . empty
    (21) empty -> .

    LOAD            shift and go to state 40
    SAIL            shift and go to state 44
    UNLOAD          reduce using rule 21 (empty -> .)

    fase_light                     shift and go to state 41
    fase_food                      shift and go to state 42
    fase_toxic                     shift and go to state 43
    empty                          shift and go to state 45

state 37

    (7) fase_light -> LOAD FOOD NOME WEIGHT PESO_LEVE KG . fase_food UNLOAD FOOD fase_light
    (15) fase_food -> LOAD FOOD NOME WEIGHT PESO_LEVE KG . fase_food UNLOAD FOOD fase_food
    (13) fase_food -> . SAIL TO NOME fase_food
    (14) fase_food -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_food UNLOAD LIGHT fase_food
    (15) fase_food -> . LOAD FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_food
    (16) fase_food -> . empty
    (21) empty -> .

    SAIL            shift and go to state 48
    LOAD            shift and go to state 46
    UNLOAD          reduce using rule 21 (empty -> .)

    fase_food                      shift and go to state 47
    empty                          shift and go to state 49

state 38

    (8) fase_light -> LOAD TOXIC NOME WEIGHT PESO_LEVE KG . fase_toxic UNLOAD TOXIC fase_light
    (17) fase_toxic -> LOAD TOXIC NOME WEIGHT PESO_LEVE KG . fase_toxic UNLOAD TOXIC fase_toxic
    (17) fase_toxic -> . LOAD TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_toxic
    (18) fase_toxic -> . LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD LIGHT fase_toxic
    (19) fase_toxic -> . SAIL TO NOME fase_toxic
    (20) fase_toxic -> . empty
    (21) empty -> .

    LOAD            shift and go to state 50
    SAIL            shift and go to state 52
    UNLOAD          reduce using rule 21 (empty -> .)

    fase_toxic                     shift and go to state 51
    empty                          shift and go to state 53

state 39

    (2) fase_heavy -> LOAD HEAVY NOME WEIGHT PESO_HEAVY KG fase_heavy . UNLOAD HEAVY fase_heavy

    UNLOAD          shift and go to state 54


state 40

    (6) fase_light -> LOAD . LIGHT NOME WEIGHT PESO_LEVE KG fase_light UNLOAD LIGHT fase_light
    (7) fase_light -> LOAD . FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_light
    (8) fase_light -> LOAD . TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_light
    (14) fase_food -> LOAD . LIGHT NOME WEIGHT PESO_LEVE KG fase_food UNLOAD LIGHT fase_food
    (15) fase_food -> LOAD . FOOD NOME WEIGHT PESO_LEVE KG fase_food UNLOAD FOOD fase_food
    (17) fase_toxic -> LOAD . TOXIC NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD TOXIC fase_toxic
    (18) fase_toxic -> LOAD . LIGHT NOME WEIGHT PESO_LEVE KG fase_toxic UNLOAD LIGHT fase_toxic

    LIGHT           shift and go to state 14
    FOOD            shift and go to state 15
    TOXIC           shift and go to state 16


state 41

    (6) fase_light -> LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_light . UNLOAD LIGHT fase_light

    UNLOAD          shift and go to state 55


state 42

    (14) fase_food -> LOAD LIGHT NOME WEIGHT PESO_LEVE KG fase_food . UNLOAD LIGHT fase_food
    (11) fase_light -> fase_food .

  ! shift/reduce conflict for UNLOAD resolved as shift
    UNLOAD          shift and go to state 56

  ! UNLOAD          [ reduce using rule 11 (fase_light -> fase_food .) ]

